# ros_hackathon_drone

src/xresto_drone/: CMakeLists.txt  README.md  package.xml  progress.md
src/xresto_drone/config/: drone_params.yaml
src/xresto_drone/documentation/: IMPLEMENTATION.md  INDEX.md  QUICKSTART.md  README.md  TECHNICAL_REPORT.md
src/xresto_drone/launch/: autonomous_mission.launch.py  display.launch.py  spawn_drone.launch.py  spawn_gate_world.launch.py
src/xresto_drone/meshes/: camera_link.STL  prop1.STL  prop2.STL  prop3.STL  prop4.STL
src/xresto_drone/models/: model.config  model.sdf
src/xresto_drone/rviz/: drone_viz.rviz
src/xresto_drone/src/: altitude_diagnostics.py  gate_detector.cpp  gate_detector_lidar.cpp  gate_navigator.py  hover_node.py  landing_detector.py  self_test.py  trajectory_planner.py
src/xresto_drone/urdf/: Final_Drone.urdf  Final_Drone1.urdf  red_gate.urdf
src/xresto_drone/worlds/: aerial_nav.world  gate_course.world
